Fixes modal height and scroll on mobile

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,8 +13,9 @@ $color-white: #fff;
 
 $text-color: $color-black;
 $input-color-placeholder: silver;
+$color-modal-bg: $color-white;
 
-// Responsible
+// Responsive
 
 $phone-width: 768px;
 $tablet-width: 1024px;
